# graph-analytica

./: .angulardoc.json  .dockerignore  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  Dockerfile  Procfile  README.md  angular.json  db.sqlite3  environment.yaml  environment.yml  graph.graphml  graph.sif  graph_analytica.gpickle  graphanalytica_nginx.conf  gunicorn.conf  karma.conf.js  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements-win.txt  requirements.txt  tsconfig.json  tslint.json  zappa_settings.json
GraphAnalytica/: settings.py  urls.py  wsgi.py
api/: urls.py  views.py
core/: constants.py  models.py  network.py  network_analyser.py  tests.py  utils.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: polyfills.ts  styles.css  tsconfig.spec.json
frontend/src/_directives/: right-click-trigger.ts
frontend/src/_models/: NodeLinkView.ts
graphanalytica/: auto_cookie_middleware.py  autocookiemiddleware.py  settings.py  urls.py  wsgi.py
graphanalytica/api/: apps.py  authentication_backend.py  models.py  serializers.py  urls.py  views.py
src/: index.html  karma.conf.js
src/_directives/: right-click-trigger.ts
src/_services/: graph-service.service.spec.ts  graph.service.ts
src/app/: app.routing.ts
ui/: tsconfig.app.json  tsconfig.spec.json
ui/_directives/: right-click-trigger.ts
ui/_models/: NodeLinkView.ts
ui/_services/: graph.service.ts
ui/app/: app-material.module.ts  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  app.routing.ts
(+122 files in other folders)
