[tool.poetry]
name = "graphanalytica"
version = "0.1.0"
description = ""
authors = ["Talha Junaid <talhajunaidd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2"
djangorestframework = "^3.12.4"
networkx = "^2.5.1"
pydot = "^1.4.2"
pyrthomas = "^0.0.6"
whitenoise = "^5.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
